<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:contentPadding="@dimen/spacing_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <co.nilin.tosanboomsample.widget.MyTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_micro"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <co.nilin.tosanboomsample.widget.MyMediumTextView
                android:id="@+id/tvAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_micro"
                android:layout_weight="1"
                android:drawablePadding="@dimen/spacing_micro"
                android:text="@string/amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <co.nilin.tosanboomsample.widget.MyTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <co.nilin.tosanboomsample.widget.MyTextView
            android:id="@+id/tvReferenceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/reference_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</android.support.v7.widget.CardView>